# cardano-gov-actions-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  gov_actions_bot.py  ipfs.py  main.py  pyproject.toml  requirements.txt
.agent/workflows/: push.md
.github/workflows/: ci.yml
bot/: cc_profiles.py  config.py  github_issues.py  links.py  llm_triage.py  logging.py  main.py  models.py  rationale_archiver.py  rationale_validator.py  state_store.py  webhook_auth.py  x_mentions.py  x_webhook_auth.py
bot/blockfrost/: __init__.py  client.py  repository.py
bot/db/: queries.py  repository.py  ssh_tunnel.py
bot/metadata/: fetcher.py
bot/twitter/: client.py  formatter.py  templates.py
data/: cc_profiles.yaml
rationales/03f671791fd97011f30e4d6b76c9a91f4f6bcfb60ee37e5399b9545bb3f2757a_0/: action.json
rationales/0b19476e40bbbb5e1e8ce153523762e2b6859e7ecacbaf06eae0ee6a447e79b9_0/: action.json
rationales/15f82a365bdee483a4b03873a40d3829cc88c048ff3703e11bd01dd9e035c916_0/: action.json
rationales/1d6aea56e6a523b13e03ae30ff24ebf9852543b4f7d415c7e50f55f6baaa4e3d_0/: action.json
rationales/207b226e110e13bb18b119fcd313520e0fcd060b2bc9fb9a5e5bc6e94ab10f3b_0/: action.json
rationales/2c7f900b7ff68f317a7b0e42231d4aed36227660baf2ee9a4be7e880eb977313_0/: action.json
rationales/3285b7fd0da16d21e0b8f8910c37f77e17a57cfff8f513df4baf692954801088_0/: action.json
rationales/3a5be93bafd26d0dbb9bfe19f4acecaa38cef75e50201d19199e6cc856db6601_0/: action.json  tweet_id.txt
rationales/3cf29192a0ee1a77985054072edcdb566ac14707730637c4635d8fb6813cb4c9_0/: action.json
scripts/: backfill_rationales.py  backfill_tweet_ids.py  setup_x_webhook.py
tests/: conftest.py  test_cc_profiles.py  test_config.py  test_db_recovery.py  test_fetcher.py  test_formatter.py  test_github_issues.py  test_links.py  test_llm_triage_sanitization.py  test_main_state_store.py  test_main_x_webhook.py  test_models.py  test_rationale_validator.py  test_state_store.py  test_twitter_client.py  test_voting_progress_integration.py  test_webhook_auth.py  test_x_mentions.py  test_x_mentions_workflow.py  test_x_webhook_auth.py
(+92 files in other folders)
