[project]
name = "gov-actions-bot"
version = "0.1.0"
description = "Cardano governance actions monitoring bot for Twitter/X"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "psycopg[binary]>=3,<4",
    "requests>=2.32,<3",
    "tenacity>=9,<10",
    "python-dotenv>=1.2.1",
    "pygithub>=2,<3",
    "google-cloud-firestore>=2.20,<3",
    "xdk>=0.8.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
